# KTest

./: CMakeLists.txt  LICENSE.txt  README.md
include/ktest/: KTest.hpp
src/: Assert.cpp  KTest.cpp  Main.cpp
unit/: Approx.cpp  CMakeLists.txt  CustomType.cpp  Factorial.cpp  Printing.cpp
